@@ -7,6 +7,7 @@ For a detailed list of changes, please see ChangeLog.
 
  * Bug fixes:
    - Fix pylint warnings and test suite
+   - Removed deprecated GObject usage
 
 0.23 (2013-02-12)
 
